# rust-nssm

./: Cargo.toml  README.md
logs/: app-2025-09-19.json
src/: cli.rs  main.rs  service_host.rs  service_manager.rs
