[package]
name = "rust-nssm"
version = "0.1.0"
edition = "2021"
description = "A Rust-based Windows service manager similar to NSSM"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
windows-service = "0.7"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
ctrlc = "3.4"
chrono = "0.4"

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_System_Services",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
]
